# lms4_Project

Client/: CMakeLists.txt  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  widget.cpp  widget.h  widget.ui
Server/: CMakeLists.txt  chatserver.cpp  chatserver.h  widget.cpp  widget.h  widget.ui
file_test/client/: mainwindow.cpp  mainwindow.h
file_test/server/: mainwindow.cpp  mainwindow.h
project1_bokemon/: game_text.py
project2_RinEZ/: game  game.c  game_backup  game_backup.c  game_final  game_final.c  game_final2  game_final2.c  game_final3  game_final3.c  game_main  game_main.c  game_main1  game_main1.c  game_main2  game_main2.c  game_main3  game_main3.c  game_main4.c  game_test3   game_test3 .c  modify  modify.c  mtest3  mtest3.c  mtest4  mtest4.c  test  test.c  test2  test2.c  test3
project3_ChatProgram/: chat  chat.clnt_backup  chat_clnt  chat_clnt.c  chat_clnt_backup.c  chat_serv  chat_serv.c  chat_serv_backup.c  chat_serv_new.c  chat_serv_test  chat_serv_test.c  server_backup2.c
project4_Card/: backup.cpp  card_clnt3  card_clnt3.cpp  card_serv  card_serv(db connect).cpp  card_serv.cpp  card_serv2  card_serv2.cpp  card_serv3  card_serv3.cpp  card_serv_class.cpp  card_servbackup.cpp  clnt4.cpp  dbconn.cpp  new_serv.cpp  serv4.cpp  tasks
project5_webtoon/client/: QTCPClient.pro  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
project5_webtoon/server/: QTCPServer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  toons.qrc
project6_delivery/: [LMS4] 1021 Qt 개인 프로젝트, 배달 어플 완료 보고서 신명호.hwp
project6_delivery/delivery_client/: login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
project6_delivery/delivery_sever/: QTCPServer.pro  mainwindow.cpp  mainwindow.h
